--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "out/stroll.js",
   "types": "out/stroll.d.js",
   "dependencies": {
+    "@most/adapter": "^1.0.0",
     "@most/core": "^1.6.1",
     "@most/dom-event": "^2.2.0",
     "@most/scheduler": "^1.3.0",
