--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@most/core": "^1.6.1",
     "@most/dom-event": "^2.2.0",
     "@most/scheduler": "^1.3.0",
+    "@types/leaflet": "^1.5.19",
+    "leaflet": "^1.7.1",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^6.3.2",
+    "dotenv-webpack": "^6.0.0",
     "ts-loader": "^8.0.11",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0"
