--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^6.3.2",
     "dotenv-webpack": "^6.0.0",
+    "http-server": "^13.0.2",
     "ts-loader": "^8.0.11",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0"
